<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/new_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventName"
        android:inputType="text"
        android:text=""
        />

    <TextView
        android:id="@+id/new_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDate"
        android:text=""
        />

    <Button
        android:id="@+id/new_event_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        />


    <TextView
        android:id="@+id/new_event_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventTime"
        android:text=""
        />

    <Button
        android:id="@+id/new_event_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        />

    <EditText
        android:id="@+id/new_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventLocation"
        android:inputType="text"
        android:text=""
        />

    <Button
        android:id="@+id/new_event_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createEvent"
        />

</LinearLayout>