<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/event_name_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eventName"
        android:textSize="8pt"
    />

    <TextView
        android:id="@+id/event_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""
        />

    <TextView
        android:id="@+id/event_org_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eventOrg"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/event_org"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""
        />

    <TextView
        android:id="@+id/event_date_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eventDate"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/event_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""
        />

    <TextView
        android:id="@+id/event_time_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eventTime"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/event_time"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""
        />

    <TextView
        android:id="@+id/event_location_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eventLocation"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/event_location"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""
        />

    <Button
        android:id="@+id/clock_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clockin"
    />

    <Button
        android:id="@+id/clock_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clockout"
        />




</LinearLayout>