<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fillViewport="true"
    tools:context=".volunteerSignUpPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Email"
            android:layout_marginStart="31dp"
            android:layout_marginTop="224dp"
            android:layout_marginEnd="309dp"
            android:layout_marginBottom="486dp"
            android:text="Password"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="325dp"
            android:layout_height="44dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="259dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="428dp"
            android:drawableEnd="@drawable/ic_key_black"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_marginStart="31dp"
            android:layout_marginTop="315dp"
            android:layout_marginEnd="337dp"
            android:layout_marginBottom="395dp"
            android:text="@string/Name"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="325dp"
            android:layout_height="46dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="341dp"
            android:drawableEnd="@drawable/ic_person_black_small"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="71dp"
            android:layout_height="21dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="141dp"
            android:layout_marginEnd="309dp"
            android:layout_marginBottom="569dp"
            android:text="Email"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="320dp"
            android:layout_height="46dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="169dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="516dp"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/volunteer_sign_up"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/volunteerSignUpButton"
            android:layout_width="179dp"
            android:layout_height="43dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="426dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="262dp"
            android:background="@drawable/button_bg"
            android:text="@string/SignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>